--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,14 @@ dependencies:
 
   english_words: ^4.0.0
   provider: ^6.0.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  hive_generator: ^2.0.0
   flutter_lints: ^2.0.0
 
 flutter:
