--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -18,11 +18,11 @@ jobs:
         with:
           flutter-version: '3.10.x'
           channel: 'stable'
-        run: | 
+      - run: | 
           flutter pub get
           flutter build web
-    - name: Configure pages
-      uses: actions/configure-pages@v3
-    - name: Upload pages artifacts
-      uses: actions/upload-pages-artifact@v1
-
+      - name: Configure pages
+        uses: actions/configure-pages@v3
+      - name: Upload pages artifacts
+        uses: actions/upload-pages-artifact@v1
+        
