--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -21,9 +21,8 @@ jobs:
       - run: | 
           flutter pub get
           flutter build web
-          cp -r build/web _site
-      - name: Configure pages
-        uses: actions/configure-pages@v3
-      - name: Upload pages artifacts
-        uses: actions/upload-pages-artifact@v1
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: build/web # The folder the action should deploy.
         
